<resources>
    <string name="app_name">LearningKotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sergey\'s App</string>
    <string name="nav_header_subtitle">leschinskysergey@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="login_login_btn">Login</string>
    <string name="login_sign_up_btn">Sign Up</string>


<!--    Sign up Page-->
    <string name="sign_up_title"> REGISTER </string>
    <string name="sign_up_welcome_text"> Create your account. It\'s free and only takes a minute</string>
    <string name="sign_up_first_name">First name</string>
    <string name="sign_up_last_name">Last name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_password_confirm">Password Confirmation</string>
    <string name="sign_up_submit_button">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--    Error handling-->
    <string name="empty_password_error">Password must not be empty</string>
    <string name="error_user_no_exist">Email doesn\'t exist in our database</string>
    <string name="error_wrong_password">Wrong password, please try a different one</string>
    <string name="empty_email_error">Email must not be empty</string>
    <string name="badly_formatted_email">Illegal email format</string>
    <string name="error_empty_field">The following field is empty</string>
    <string name="error_password_must_match">Passwords must match</string>
    <string name="error_password_weak">Password length must be at least 8, contain at least 1 letter and number</string>
    <string name="error_user_already_exists">A user with this email already exists, please log in or user another</string>
    <string name="error_no_summoner">There isn\'t a summoner in that region with this summoner name</string>
    <string name="process_dialog">Please wait...</string>


    <!--    Region spinner-->

    <string-array name="regions">
        <item>BR1	</item>
        <item>EUN1</item>
        <item>EUW1</item>
        <item>JP1	</item>
        <item>KR	</item>
        <item>LA1	</item>
        <item>LA2	</item>
        <item>NA1	</item>
        <item>OC1	</item>
        <item>TR1	</item>
        <item>RU</item>
    </string-array>
</resources>
